--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,26 @@
   justify-content: center;
   align-items: flex-start;
   padding-top: 5rem;
+
+  @include sm{
+    flex-direction: column;
+  }
+
+
+
   .sidebar {
     flex: 0 0 25rem;
     padding: 0 2rem 2rem 2rem;
+    select{
+      width: 100%;
+      margin-bottom: 2rem;
+      border-radius: 0.3rem;
+      background: white;
+      border: 0;
+      outline: 0;
+      padding: 1rem;
+      box-shadow: var(--box-shadow);
+    }
     .categories {
       padding: 2rem;
       background: white;
@@ -22,6 +39,13 @@
           strong {
             color: var(--primary);
           }
+        }
+      }
+      .active{
+        color:var(--primary);
+        font-weight: 700;
+        strong{
+          color:var(--primary);
         }
       }
     }
